Login page updated as per Squidex Login

--- a/RioId/Pages/Account/Login/Index.cshtml
+++ b/RioId/Pages/Account/Login/Index.cshtml
@@ -1,89 +1,82 @@
 @page
 @model RioId.Pages.Login.Index
+@inject IHtmlLocalizer<AppResources> T
 
-<div class="login-page">
-    <div class="lead">
-        <h1>Login</h1>
-        <p>Choose how to login</p>
-    </div>
+@{
+    ViewData["Title"] = T["LoginTitle"];
+}
 
-    <partial name="_ValidationSummary" />
+@if (Model.View.EnableLocalLogin)
+{
+    <section>
+        <form asp-page="/Account/Login/Index">
+            <input type="hidden" asp-for="Input.ReturnUrl" />
+            <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
 
-    <div class="row">
+            <div class="form-group">
+                <label asp-for="Input.Username">@T["EmailLabel"]</label>
+                <input asp-for="Input.Username" class="form-control" />
+                <span asp-validation-for="Input.Username" class="invalid-feedback"></span>
+            </div>
 
-        @if (Model.View.EnableLocalLogin)
-        {
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-header">
-                        <h2>Local Account</h2>
-                    </div>
-
-                    <div class="card-body">
-                        <form asp-page="/Account/Login/Index">
-                            <input type="hidden" asp-for="Input.ReturnUrl" />
-
-                            <div class="form-group">
-                                <label asp-for="Input.Username"></label>
-                                <input class="form-control" placeholder="Username" asp-for="Input.Username" autofocus>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="Input.Password"></label>
-                                <input type="password" class="form-control" placeholder="Password" asp-for="Input.Password" autocomplete="off">
-                            </div>
-                            
-                            @if (Model.View.AllowRememberLogin)
-                            {
-                                <div class="form-group">
-                                    <div class="form-check">
-                                        <input class="form-check-input" asp-for="Input.RememberLogin">
-                                        <label class="form-check-label" asp-for="Input.RememberLogin">
-                                            Remember My Login
-                                        </label>
-                                    </div>
-                                </div>
-                            }
-                            
-                            <button class="btn btn-primary" name="Input.Button" value="login">Login</button>
-                            <button class="btn btn-secondary" name="Input.Button" value="cancel">Cancel</button>
-                        </form>
+            <div class="form-group">
+                <label asp-for="Input.Password">@T["PasswordLabel"]</label>
+                <input asp-for="Input.Password" type="password" class="form-control" />
+                <span asp-validation-for="Input.Password" class="invalid-feedback"></span>
+            </div>
+            @if (Model.View.AllowRememberLogin)
+            {
+                <div class="form-group">
+                    <div class="checkbox">
+                        <label asp-for="Input.RememberLogin">
+                            <input asp-for="Input.RememberLogin" /> @T["RememberMe"]
+                        </label>
                     </div>
                 </div>
+            }
+            <div class="form-group">
+                <button type="submit" name="Input.Button" value="login" class="btn btn-block btn-primary">@T["LoginButton"]</button>
             </div>
-        }
 
-        @if (Model.View.VisibleExternalProviders.Any())
-        {
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-header">
-                        <h2>External Account</h2>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-inline">
-                            @foreach (var provider in Model.View.VisibleExternalProviders)
-                            {
-                                <li class="list-inline-item">
-                                    <a class="btn btn-secondary"
-                                       asp-page="/ExternalLogin/Challenge"
-                                       asp-route-scheme="@provider.AuthenticationScheme"
-                                       asp-route-returnUrl="@Model.Input.ReturnUrl">
-                                        @provider.DisplayName
-                                    </a>
-                                </li>
-                            }
-                        </ul>
-                    </div>
-                </div>
+            <div class="form-group">
+                <a asp-page="./ForgotPassword">@T["ForgotPasswordQuestion"]</a> | <a asp-page="./Register" asp-route-returnUrl="@Model.Input.ReturnUrl">@T["NoAccountQuestion"]</a>
             </div>
-        }
+        </form>
+    </section>
+}
 
-        @if (!Model.View.EnableLocalLogin && !Model.View.VisibleExternalProviders.Any())
-        {
-            <div class="alert alert-warning">
-                <strong>Invalid login request</strong>
-                There are no login schemes configured for this request.
-            </div>
-        }
+@if (Model.View.VisibleExternalProviders.Any())
+{
+    <div class="login-separator">
+        @T["ExternalSeperator"]
     </div>
-</div>
+
+    <section>
+        <form asp-page="/ExternalLogin/Challenge"
+              asp-route-returnUrl="@Model.Input.ReturnUrl" method="post" class="form-horizontal">
+            <div>
+                <p>
+                    @foreach (var provider in Model.View.VisibleExternalProviders)
+                    {
+                        var lowerName = @provider.DisplayName.ToLowerInvariant();
+
+                        <button type="submit" 
+                            class="btn btn-block btn-social btn-dark btn-@lowerName" 
+                            name="provider" 
+                            value="@provider.DisplayName">
+                            <i class="fab fa-@lowerName"></i> @T[$"LoginWith{provider.DisplayName}"]        
+                        </button>
+                    }
+                </p>
+            </div>
+        </form>
+    </section>
+}
+
+@if (!Model.View.EnableLocalLogin && !Model.View.VisibleExternalProviders.Any())
+{
+    <div class="alert alert-warning">
+        <strong>Invalid login request</strong>
+        There are no login schemes configured for this request.
+    </div>
+}
