--- a/RioId/Pages/_ViewImports.cshtml
+++ b/RioId/Pages/_ViewImports.cshtml
@@ -1,2 +1,5 @@
-﻿@using RioId.Pages
+﻿@using RioId
+@using RioId.Pages
+@using RioId.Services
+@using Microsoft.AspNetCore.Mvc.Localization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
