--- a/RioId/Pages/Shared/_Layout.cshtml
+++ b/RioId/Pages/Shared/_Layout.cshtml
@@ -1,29 +1,118 @@
+@inject ISettingsProvider SettingsProvider
+@inject IHtmlLocalizer<AppResources> T
+
+@{
+    var settings = await SettingsProvider.GetSettingsAsync();
+}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-
-    <title>Duende IdentityServer</title>
     
+    <title>@ViewData["Title"] - @settings.SiteName</title>
+    
+    @if (!string.IsNullOrWhiteSpace(settings.BootstrapUrl))
+    {
+        <link rel="stylesheet" href="@settings.BootstrapUrl" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+    }
+    else
+    {
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+    }
+
+    @if (!string.IsNullOrWhiteSpace(settings.StylesUrl))
+    {
+        <link rel="stylesheet" href="@settings.StylesUrl" />
+    }
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="~/css/site.min.css" />
+
     <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
     <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico" />
-    
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/lib/bootstrap4-glyphicons/css/bootstrap-glyphicons.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <partial name="_Nav" />
-   
-    <div class="container body-container">
-        @RenderBody()
+    <div class="container2">
+        <header>
+            @{
+                var image = settings.Logo;
+
+                var link =
+                User.Identity.IsAuthenticated ?
+                Url.Content("~/") :
+                Url.Content("~/manage");
+            }
+
+            @if (!string.IsNullOrWhiteSpace(image))
+            {
+                <a href="@link">
+                    <img class="logo" src="@image?mode=Max&height=100" alt="@settings.SiteName" />
+                </a>
+            }
+            else
+            {
+                <a href="@link">
+                    <img class="logo" src="~/images/logo-half.png" alt="@settings.SiteName" />
+                </a>
+            }
+        </header>
+
+        <content>
+            @RenderBody()
+        </content>
+
+        <footer>
+            <p>@settings.FooterText</p>
+
+            <p>
+                @if (!string.IsNullOrWhiteSpace(settings.LegalUrl))
+                {
+                    <a href="@settings.LegalUrl" target="_blank" rel="nofollow">
+                        @T["Legal"]
+                    </a>
+                }
+                @if (!string.IsNullOrWhiteSpace(settings.PrivacyPolicyUrl))
+                {
+                    <a href="@settings.PrivacyPolicyUrl" target="_blank" rel="nofollow">
+                        @T["PrivacyPolicy"]
+                    </a>
+                }
+
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <a href="~/logout">
+                        @T["Logout"]
+                    </a>
+                }
+            </p>
+        </footer>
     </div>
 
-    <script src="~/lib/jquery/dist/jquery.slim.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
     @RenderSection("scripts", required: false)
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script>
+        $(function () {
+            $('.close').click(function () {
+                $(this).parent().remove();
+            });
+        });
+    </script>
+
+    @if (!string.IsNullOrWhiteSpace(settings.GoogleAnalyticsId))
+    {
+        <script async src="https://www.googletagmanager.com/gtag/js?id=@settings.GoogleAnalyticsId"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+            gtag('config', '@settings.GoogleAnalyticsId', { 'anonymize_ip': true });
+        </script>
+    }
 </body>
 </html>
