--- a/RioId/Pages/_ViewImports.cshtml
+++ b/RioId/Pages/_ViewImports.cshtml
@@ -1,5 +1,9 @@
 ﻿@using RioId
+@using RioId.Models
 @using RioId.Pages
 @using RioId.Services
+@using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Mvc.Localization
+
+@namespace RioId.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
